Create simple agent in Python with Endpoint (no hub)

--- a/Sample.env
+++ b/Sample.env
@@ -1,3 +1,7 @@
+# Este funciona con cadena de conexión de Azure AI Foundry (requiere un Hub)
 AI_PROJECT_CONNECTION_STRING=""
 
 CHAT_MODEL=""
+
+# Este funciona con el endpoint de Azure AI Foundry (sin hub)
+NEW_AIFOUNDRY_PROJECT_ENDPOINT=""
